# bayanat

./: .dockerignore  .env-sample  .gitattributes  .gitignore  .jsbeautifyrc  .pre-commit-config.yaml  .prettierrc  .retireignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SAFE_EXPUNGING.md  SECURITY.md  UPDATE_ARCHITECTURE_PLAN.md  babel.cfg  bayanat  config.sample.json  config.test.json  dev-requirements.txt  docker-compose-dev.yml  docker-compose-prebuilt-dev.yml  docker-compose-prebuilt-test.yml  docker-compose-test.yml  docker-compose.override.yml  docker-compose.swarm.yml  docker-compose.yml  e2e-auto-update.sh  gen-env.sh  install.sh  messages.pot  opt-requirements.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  docs.yml  fe-js-audit.yml  pip-audit.yml  run-tests.yml  semgrep.yml
docs/: api.yaml  index.md  package-lock.json  package.json  threat_model.md
docs/.vitepress/: config.ts
docs/deployment/: auto-update-runbook.md  backups.md  configuration.md  docker.md  installation.md  migrations.md  release-signing.md  setup-wizard.md  upgrading.md
docs/guide/: access-control.md  account-security.md  activity.md  actors.md  bulk-operations.md  bulletins.md  data-export.md  data-import.md  deduplication.md  dynamic-fields.md  events.md  incidents.md  labels.md  locations.md  map-visualization.md  media-import.md  media.md  notifications.md  ocr.md  permissions.md  redaction.md  revision-history.md  search.md  sources.md  transcription.md  web-import.md  what-is-bayanat.md  workflow.md
docs/methodology/: analysis.md  missing-persons.md  unverified-labels.md  verified-labels.md
docs/security/: threat-model.md
enferno/: app.py  commands.py  extensions.py  settings.py
enferno/admin/: constants.py  models.py  views.py
enferno/data/: atoa_info.csv  atob_info.csv  btob_info.csv  claimed_violation.csv  countries.csv  ethnographies.csv  eventtypes.csv  geo_location_types.csv  id_number_types.csv  itoa_info.csv  itob_info.csv  itoi_info.csv  label.csv  media_categories.csv  potential_violation.csv
enferno/data_import/: models.py  views.py
enferno/deduplication/: models.py  views.py
enferno/export/: models.py  views.py
enferno/migrations/: 1_system_information.sql  20240101_000002_migration_history.sql  20250109_174532_create_originid_indices.sql  20250115_120200_export_ref_to_tags.sql  20250125_172708_tags_serach.sql  20250527_000000_search_optimization_indexes.sql  20250527_005103_add_search_foreign_key_indexes.sql  20250527_011051_add_actor_search_foreign_key_indexes.sql  20250527_011441_add_incident_search_foreign_key_indexes.sql  20250619_135424_add_actor_tags_gin_index.sql  20250620_210813_add_missing_critical_indexes.sql  20250623_120954_create_id_number_types.sql  20250623_184016_actor_id_number_migration.sql  20250623_184016_test_actor_id_number_migration_data_integrity.sql  20250718_153735_create_notification_table.sql  20250820_101500_create_dynamic_fields_table.sql  20250901_000000_create_system_info.sql  20250929_000000_create_migration_history.sql  20250929_120000_test_migration.sql  20251003_000001_test_rollback_fail.sql  20251003_144517_seed_incident_core_fields.sql  20251004_000001_dummy_update_test.sql  20251022_000002_create_update_history.sql  20251103_000003_dummy_add_column_for_update_test.sql  20251105_225708_refactor_system_roles.sql  20251127_000000_add_user_status.sql  20251215_120000_fix_label_flag_inheritance.sql  (+8 more)
enferno/public/: views.py
flask/: .env-sample  Dockerfile  Dockerfile.dev  Dockerfile.test
import-data/: create-labels.sql
migrations/: env.py
nginx/: Dockerfile  bayanat.conf  nginx.conf
postgres/: Dockerfile
requirements/: dev.txt  main.txt  opt.txt  requirements-opt.txt  requirements.txt
tests/: conftest.py  factories.py  test_actor_search_behavior.py  test_background_search.py  test_core_entities.py  test_health.py  test_label_tree.py  test_lookup_crud.py  test_migrations.py  test_pentest_fixes.py  test_search_query_combination.py  test_security.py  test_session_poll_refresh.py  test_specialized.py  test_update_check.py  test_update_endpoints.py  test_users.py  test_utils.py
updates/: latest.json
(+599 files in other folders)
